# pzsd-bot

./: .gitignore  Dockerfile  README.md  config.yml  entrypoint.sh  main.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/: CODEOWNERS
.github/workflows/: build_and_push.yml  lint_format.yml  test_lint_format.yml
alembic/: env.py
alembic/versions/: 01620645b7bd_add_trigger_response_type.py  09214f192b54_add_timezone_to_user_table.py  14f002fc4966_add_point_giver_column_to_user_table.py  8119e0e270cd_add_ledger_and_user_table.py  8905ff0b3cc2_make_discord_snowflake_optional_for_.py  ada18e8c9983_enforce_unique_user_name_and_snowflake.py  bec671a2dd49_add_reminder_table.py  bf4945378c82_add_trigger_tables.py  c04346189431_add_is_active_column_to_user_table.py  e0d89d644b1b_add_users.py
kubernetes/: deployment.yaml  namespace.yaml
pzsd_bot/: __init__.py  __main__.py  client.py  db.py  model.py  scheduler.py  settings.py
pzsd_bot/cogs/: points.py
pzsd_bot/cogs/advent_of_code/: admin.py  aoc.py  leaderboard.py
pzsd_bot/cogs/misc/: dice.py
pzsd_bot/cogs/points/: admin.py  leaderboard.py  points.py
pzsd_bot/cogs/reminders/: admin.py  reminders.py
pzsd_bot/cogs/triggers/: admin.py  triggers.py
pzsd_bot/ext/: pagination.py  scheduler.py
pzsd_bot/ui/: buttons.py
pzsd_bot/ui/triggers/: modals.py
tests/: conftest.py  test_points.py
