[project]
name = "pzsd-bot"
version = "1.18.0"
description = "Discord bot for the PZSD server."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "emoji>=2.14.1",
    "greenlet>=3.1.1",
    "pendulum>=3.0.0",
    "py-cord>=2.6.1",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "sqlalchemy>=2.0.37",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20.0",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-env>=1.1.5",
    "ruff>=0.9.1",
]
